--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/joaovgatti/clean-node-api/issues"
   },
-  "homepage": "https://github.com/joaovgatti/clean-node-api#readme"
+  "homepage": "https://github.com/joaovgatti/clean-node-api#readme",
+  "devDependencies": {
+    "@types/node": "^14.11.1",
+    "typescript": "^4.0.3"
+  }
 }
