--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "TDD, Clean Code and much more with Node",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,10 @@
   },
   "homepage": "https://github.com/joaovgatti/clean-node-api#readme",
   "devDependencies": {
+    "@types/jest": "^26.0.14",
     "@types/node": "^14.11.1",
+    "jest": "^26.4.2",
+    "ts-jest": "^26.4.0",
     "typescript": "^4.0.3"
   }
 }
