--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
   "devDependencies": {
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.1",
+    "@types/validator": "^13.1.0",
     "jest": "^26.4.2",
     "ts-jest": "^26.4.0",
     "typescript": "^4.0.3"
+  },
+  "dependencies": {
+    "validator": "^13.1.17"
   }
 }
