--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/joaovgatti/clean-node-api#readme",
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.1",
     "@types/validator": "^13.1.0",
@@ -26,6 +27,7 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "validator": "^13.1.17"
   }
 }
