--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/joaovgatti/clean-node-api#readme",
   "devDependencies": {
+    "@shelf/jest-mongodb": "^1.2.3",
     "@types/bcrypt": "^3.0.0",
     "@types/jest": "^26.0.14",
+    "@types/mongodb": "^3.5.27",
     "@types/node": "^14.11.1",
     "@types/validator": "^13.1.0",
     "jest": "^26.4.2",
@@ -28,6 +30,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "mongodb": "^3.6.2",
     "validator": "^13.1.17"
   }
 }
