--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "TDD, Clean Code and much more with Node",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "sucrase-node src/main/server.ts"
   },
   "repository": {
     "type": "git",
@@ -20,16 +21,19 @@
   "devDependencies": {
     "@shelf/jest-mongodb": "^1.2.3",
     "@types/bcrypt": "^3.0.0",
+    "@types/express": "^4.17.8",
     "@types/jest": "^26.0.14",
     "@types/mongodb": "^3.5.27",
     "@types/node": "^14.11.1",
     "@types/validator": "^13.1.0",
     "jest": "^26.4.2",
+    "sucrase": "^3.15.0",
     "ts-jest": "^26.4.0",
     "typescript": "^4.0.3"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "express": "^4.17.1",
     "mongodb": "^3.6.2",
     "validator": "^13.1.17"
   }
