--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@types/jest": "^26.0.14",
     "@types/mongodb": "^3.5.27",
     "@types/node": "^14.11.1",
+    "@types/supertest": "^2.0.10",
     "@types/validator": "^13.1.0",
     "jest": "^26.4.2",
     "sucrase": "^3.15.0",
+    "supertest": "^5.0.0",
     "ts-jest": "^26.4.0",
     "typescript": "^4.0.3"
   },
